Modifico el primer div de comienzo

--- a/main.html
+++ b/main.html
@@ -4,11 +4,12 @@
         <meta charset="utf-8">
         <title></title>
     </head>
-    <script src="jquery.js" />
-    <script src="aux.js" />
+    <link rel="stylesheet" href="estilos.css">
+    <script src="jquery.js"></script>
+    <script src="aux.js"></script>
     <script>
         $(document).ready(function(){
-
+            comenzar();
         });
     </script>
     <body>
