Comienzo del proyecto -DONE

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <script src="aux.js"></script>
     <script>
         $(document).ready(function(){
-            comenzar();
+            presentacion();
         });
     </script>
     <body>
