--- a/vista.html
+++ b/vista.html
@@ -3,10 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <script src="jquery.html"> </script>
+        <script src="jquery.js"> </script>
         <link rel="stylesheet" href="estilos.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <script src="aux.js"></script>
     </head>
     <body>
-        <button id="botonCambio">Preliminar</button>
+        <a id="botonCambio" href='main.html' class='btn btn-primary'>Edición</input>
     </body>
 </html>
